--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Prixima</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/boxicons.min.css" />
     <link rel="stylesheet" href="./css/owl.carousel.min.css" />
