--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     <link rel="stylesheet" href="./css/owl.theme.default.min.css" />
   </head>
   <body>
-    <!-- MAIN NAVBAR -->
+    <!-- NAVBAR -->
+    <nav class="top-nav">
+      <div class="container">
+        <div class="row">
+          <div class="col-auto">
+            <p>
+              <i class='bx bxs-envelope'></i>
+              <span>debra.holt@example.com</span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </nav>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar</a>
