--- a/index.html
+++ b/index.html
@@ -17,9 +17,18 @@
         <div class="row">
           <div class="col-auto">
             <p>
-              <i class='bx bxs-envelope'></i>
-              <span>debra.holt@example.com</span>
+              <i class="bx bxs-envelope"></i>
+              <span>Jamal.sic-edge@example.com</span>
             </p>
+            <p>
+              <i class="bx bxs-phone-call"></i>
+              <span>(+254)714304597</span>
+            </p>
+          </div>
+          <div class="col-auto">
+            <div class="social-links">
+              <a href="#"><i class="bx bxl-facebook"></i></a>
+            </div>
           </div>
         </div>
       </div>
