--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!-- NAVBAR -->
-    <nav class="top-nav">
+    <nav class="top-nav" id="home">
       <div class="container">
         <div class="row justify-content-between">
           <div class="col-auto">
@@ -38,7 +38,7 @@
     </nav>
     <nav class="navbar navbar-expand-lg bg-white">
       <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Prixima<span>.</span></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -51,12 +51,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav ms-auto">            
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="#home">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
@@ -82,7 +79,7 @@
       </div>
     </nav>
 
-    <h1>hello</h1>
+   
 
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/jquery.min.js"></script>
