--- a/index.html
+++ b/index.html
@@ -74,10 +74,15 @@
               <a class="nav-link" href="#">Blog</a>
             </li>
           </ul>
-          <a href="#" class="btn btn-brand">Contact Us</a>
+          <a href="#" class="btn btn-brand ms-lg-3">Contact Us</a>
         </div>
       </div>
     </nav>
+
+    <!-- SLIDER -->
+    <div class="slider-wrapper">
+      
+    </div>
 
    
 
