--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
 
     <!-- SLIDER -->
     <div class="slider-wrapper">
-      
+      <div class="slide1">
+        <div class="container">
+          
+        </div>
+      </div>
     </div>
 
    
