add update on slider section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,13 @@
     <div class="slider-wrapper">
       <div class="slide1">
         <div class="container">
-          
+          <div class="row">
+            <div class="col-12">
+              <h6>We craft digital experiences</h6>
+              <h1>Design Driven for Professionals</h1>
+              <a href="#" class="btn btn-brand">Get Started</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
