add update on slider section

--- a/index.html
+++ b/index.html
@@ -81,13 +81,14 @@
 
     <!-- SLIDER -->
     <div class="slider-wrapper">
-      <div class="slide1">
+      <div class="slide1 min-vh-100">
         <div class="container">
           <div class="row">
             <div class="col-12">
               <h6>We craft digital experiences</h6>
               <h1>Design Driven for Professionals</h1>
               <a href="#" class="btn btn-brand">Get Started</a>
+              <a href="#" class="btn btn-outline-light">Our work</a>
             </div>
           </div>
         </div>
