--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="row">
             <div class="col-12">
               <h6 class="text-uppercase">We craft digital experiences</h6>
-              <h1>Design Driven for Professionals</h1>
+              <h1 class="display-3">Design Driven for <br> Professionals</h1>
               <a href="#" class="btn btn-brand">Get Started</a>
               <a href="#" class="btn btn-outline-light">Our work</a>
             </div>
