add overlay on slider section

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </nav>
 
     <!-- SLIDER -->
-    <div class="slider-wrapper">
+    <div class="slider-wrapper owl-carousel owl-theme" id="hero-slider">
       <div class="slide1 min-vh-100 bg-cover d-flex align-items-center">
         <div class="container">
           <div class="row">
