--- a/index.html
+++ b/index.html
@@ -100,5 +100,6 @@
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/jquery.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
