add overlay on slider section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 
     <!-- SLIDER -->
     <div class="slider-wrapper owl-carousel owl-theme" id="hero-slider">
+
       <div class="slide1 min-vh-100 bg-cover d-flex align-items-center">
         <div class="container">
           <div class="row">
@@ -93,6 +94,21 @@
           </div>
         </div>
       </div>
+
+      <div class="slide2 min-vh-100 bg-cover d-flex align-items-center">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <h6 class="text-uppercase text-white">We craft digital experiences</h6>
+              <h1 class="display-2 m-3 text-white text-uppercase">Design Driven for <br> Professionals</h1>
+              <a href="#" class="btn btn-brand">Get Started</a>
+              <a href="#" class="btn btn-outline-light ms-md-3">Our work</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
 
    
