--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h6 class="text-uppercase text-white">We craft digital experiences</h6>
-              <h1 class="display-2 m-3 text-white text-uppercase">Design Driven for <br> Professionals</h1>
+              <h6 class="text-uppercase text-white">Design driven professionals</h6>
+              <h1 class="display-2 m-3 text-white text-uppercase">We craft digital <br> Experiences</h1>
               <a href="#" class="btn btn-brand">Get Started</a>
               <a href="#" class="btn btn-outline-light ms-md-3">Our work</a>
             </div>
