add overlay on slider section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="slide2 min-vh-100 bg-cover d-flex align-items-center">
         <div class="container">
           <div class="row">
-            <div class="col-12">
+            <div class="col-12 text-center">
               <h6 class="text-uppercase text-white">Design driven professionals</h6>
               <h1 class="display-2 m-3 text-white text-uppercase">We craft digital <br> Experiences</h1>
               <a href="#" class="btn btn-brand">Get Started</a>
