--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/owl.theme.default.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body data-bs-spy="scroll" data-bs-target="#navbar-example">
+  <body data-bs-spy="scroll" data-bs-target=".navbar">
     <!-- NAVBAR -->
     <nav class="top-nav" id="home">
       <div class="container">
@@ -36,7 +36,7 @@
         </div>
       </div>
     </nav>
-    <nav class="navbar navbar-expand-lg bg-white">
+    <nav class="navbar navbar-expand-lg bg-white sticky-top">
       <div class="container">
         <a class="navbar-brand" href="#">Prixima<span>.</span></a>
         <button
