add about section layout elements

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body data-bs-spy="scroll" data-bs-target=".navbar">
     <!-- NAVBAR -->
-    <nav class="top-nav" id="home">
+    <!-- <nav class="top-nav" id="home">
       <div class="container">
         <div class="row justify-content-between">
           <div class="col-auto">
@@ -77,7 +77,7 @@
           <a href="#" class="btn btn-brand ms-lg-3">Contact Us</a>
         </div>
       </div>
-    </nav>
+    </nav> -->
 
     <!-- SLIDER -->
     <div class="slider-wrapper owl-carousel owl-theme" id="hero-slider">
@@ -110,6 +110,17 @@
 
 
     </div>
+
+     <!-- ABOUT -->
+     <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5">
+            
+          </div>
+        </div>
+      </div>
+     </section>
 
    
 
