add about section layout elements

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body data-bs-spy="scroll" data-bs-target=".navbar">
     <!-- NAVBAR -->
-    <!-- <nav class="top-nav" id="home">
+    <nav class="top-nav" id="home">
       <div class="container">
         <div class="row justify-content-between">
           <div class="col-auto">
@@ -51,7 +51,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">            
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link" href="#home">Home</a>
             </li>
@@ -77,17 +77,21 @@
           <a href="#" class="btn btn-brand ms-lg-3">Contact Us</a>
         </div>
       </div>
-    </nav> -->
+    </nav>
 
     <!-- SLIDER -->
     <div class="slider-wrapper owl-carousel owl-theme" id="hero-slider">
-
       <div class="slide1 min-vh-100 bg-cover d-flex align-items-center">
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h6 class="text-uppercase text-white">We craft digital experiences</h6>
-              <h1 class="display-2 m-3 text-white text-uppercase">Design Driven for <br> Professionals</h1>
+              <h6 class="text-uppercase text-white">
+                We craft digital experiences
+              </h6>
+              <h1 class="display-2 m-3 text-white text-uppercase">
+                Design Driven for <br />
+                Professionals
+              </h1>
               <a href="#" class="btn btn-brand">Get Started</a>
               <a href="#" class="btn btn-outline-light ms-md-3">Our work</a>
             </div>
@@ -99,30 +103,42 @@
         <div class="container">
           <div class="row">
             <div class="col-12 text-center">
-              <h6 class="text-uppercase text-white">Design driven professionals</h6>
-              <h1 class="display-2 m-3 text-white text-uppercase">We craft digital <br> Experiences</h1>
+              <h6 class="text-uppercase text-white">
+                Design driven professionals
+              </h6>
+              <h1 class="display-2 m-3 text-white text-uppercase">
+                We craft digital <br />
+                Experiences
+              </h1>
               <a href="#" class="btn btn-brand">Get Started</a>
               <a href="#" class="btn btn-outline-light ms-md-3">Our work</a>
             </div>
           </div>
         </div>
       </div>
-
-
     </div>
 
-     <!-- ABOUT -->
-     <section>
+    <!-- ABOUT -->
+    <section>
       <div class="container">
         <div class="row">
           <div class="col-lg-5">
-            
+            <div class="row">
+              <div class="col-12 info-box">
+                <img src="./img/icon4.png" alt="" />
+                <div class="">
+                  <h5>Digital Marketing</h5>
+                  <p>
+                    It is a long established fact that a reader will be
+                    distracted by the readable content of a page
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-     </section>
-
-   
+    </section>
 
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/jquery.min.js"></script>
