add style to about section

--- a/index.html
+++ b/index.html
@@ -134,6 +134,26 @@
                   </p>
                 </div>
               </div>
+              <div class="col-12 info-box">
+                <img src="./img/icon4.png" alt="" />
+                <div class="">
+                  <h5>Digital Marketing</h5>
+                  <p>
+                    It is a long established fact that a reader will be
+                    distracted by the readable content of a page
+                  </p>
+                </div>
+              </div>
+              <div class="col-12 info-box">
+                <img src="./img/icon4.png" alt="" />
+                <div class="">
+                  <h5>Digital Marketing</h5>
+                  <p>
+                    It is a long established fact that a reader will be
+                    distracted by the readable content of a page
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
