--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="row">
           <div class="col-lg-5">
             <div class="row">
-              <div class="col-12 info-box">
+              <div class="col-12 info-box mt-3">
                 <img src="./img/icon4.png" alt="" />
                 <div class="">
                   <h5>Digital Marketing</h5>
@@ -134,8 +134,8 @@
                   </p>
                 </div>
               </div>
-              <div class="col-12 info-box">
-                <img src="./img/icon4.png" alt="" />
+              <div class="col-12 info-box mt-3">
+                <img src="./img/icon5.png" alt="" />
                 <div class="">
                   <h5>Digital Marketing</h5>
                   <p>
@@ -144,8 +144,8 @@
                   </p>
                 </div>
               </div>
-              <div class="col-12 info-box">
-                <img src="./img/icon4.png" alt="" />
+              <div class="col-12 info-box mt-3">
+                <img src="./img/icon6.png" alt="" />
                 <div class="">
                   <h5>Digital Marketing</h5>
                   <p>
