add style to about section

--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-5">
+            <img src="./img/about.png" alt="Image">
+          </div>
         </div>
       </div>
     </section>
