--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <!-- ABOUT -->
     <section>
       <div class="container">
-        <div class="row">
+        <div class="row align-items-center">
           <div class="col-lg-5">
             <div class="row">
               <div class="col-12 info-box mt-4">
