--- a/index.html
+++ b/index.html
@@ -163,6 +163,30 @@
       </div>
     </section>
 
+    <!-- MILESTONE -->
+    <section id="milestone" class="bg-cover">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-lg-3">
+            <div class="display-4">4546</div>
+            <p class="mb-0">Happy Clients</p>
+          </div>
+          <div class="col-lg-3">
+            <div class="display-4">5678</div>
+            <p class="mb-0">Happy Clients</p>
+          </div>
+          <div class="col-lg-3">
+            <div class="display-4">4509</div>
+            <p class="mb-0">Happy Clients</p>
+          </div>
+          <div class="col-lg-3">
+            <div class="display-4">9846</div>
+            <p class="mb-0">Happy Clients</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/jquery.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
