add style to about section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </div>
           </div>
           <div class="col-lg-5">
-            <img src="./img/about.png" alt="Image">
+            <img src="./img/about.png" alt="Image" />
           </div>
         </div>
       </div>
@@ -166,22 +166,39 @@
     <!-- MILESTONE -->
     <section id="milestone" class="bg-cover">
       <div class="container">
-        <div class="row text-center">
-          <div class="col-lg-3">
-            <div class="display-4">4546</div>
+        <div class="row gy-4 text-center justify-content-center">
+          <div class="col-lg-2 col-sm-6">
+            <div class="display-4">90K+</div>
             <p class="mb-0">Happy Clients</p>
           </div>
-          <div class="col-lg-3">
-            <div class="display-4">5678</div>
-            <p class="mb-0">Happy Clients</p>
+          <div class="col-lg-2 col-sm-6">
+            <div class="display-4">45</div>
+            <p class="mb-0">Lines of code</p>
           </div>
-          <div class="col-lg-3">
-            <div class="display-4">4509</div>
-            <p class="mb-0">Happy Clients</p>
+          <div class="col-lg-2 col-sm-6">
+            <div class="display-4">190</div>
+            <p class="mb-0">Total Downloads</p>
           </div>
-          <div class="col-lg-3">
-            <div class="display-4">9846</div>
-            <p class="mb-0">Happy Clients</p>
+          <div class="col-lg-2 col-sm-6">
+            <div class="display-4">380K</div>
+            <p class="mb-0">YouTube Subscribers</p>
+            <h1>what we provide?</h1>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SERVICES -->
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 intro">
+            <h6>OUR SERVICES</h6>
           </div>
         </div>
       </div>
