--- a/index.html
+++ b/index.html
@@ -182,12 +182,6 @@
           <div class="col-lg-2 col-sm-6">
             <div class="display-4">380K</div>
             <p class="mb-0">YouTube Subscribers</p>
-            <h1>what we provide?</h1>
-            <p>
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old
-            </p>
           </div>
         </div>
       </div>
@@ -197,8 +191,14 @@
     <section id="services">
       <div class="container">
         <div class="row">
-          <div class="col-12 intro">
+          <div class="col-12 intro text-center">
             <h6>OUR SERVICES</h6>
+            <h1>what We Do</h1>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old
+            </p>
           </div>
         </div>
       </div>
