--- a/index.html
+++ b/index.html
@@ -201,6 +201,18 @@
             </p>
           </div>
         </div>
+        <div class="row">
+          <div class="col-lg-4 col-sm-6">
+            <div class="service-box">
+              <img src="./img/icon1.png" alt="" />
+              <h5>Digital Marketing</h5>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
