--- a/index.html
+++ b/index.html
@@ -212,6 +212,56 @@
               </p>
             </div>
           </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="service-box">
+              <img src="./img/icon2.png" alt="" />
+              <h5>Digital Marketing</h5>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="service-box">
+              <img src="./img/icon3.png" alt="" />
+              <h5>Digital Marketing</h5>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="service-box">
+              <img src="./img/icon4.png" alt="" />
+              <h5>Digital Marketing</h5>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="service-box">
+              <img src="./img/icon5.png" alt="" />
+              <h5>Digital Marketing</h5>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="service-box">
+              <img src="./img/icon6.png" alt="" />
+              <h5>Digital Marketing</h5>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
