--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </p>
           </div>
         </div>
-        <div class="row">
+        <div class="row g-4">
           <div class="col-lg-4 col-sm-6">
             <div class="service-box">
               <img src="./img/icon1.png" alt="" />
