--- a/index.html
+++ b/index.html
@@ -266,6 +266,37 @@
       </div>
     </section>
 
+    <!-- OUR WORK -->
+    <section id="" class="bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 intro text-center">
+            <h6>OUR WORK</h6>
+            <h1>what We Do</h1>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old
+            </p>
+          </div>
+        </div>
+        <div class="project-slider" class="owl-theme owl-carousel">
+          <div class="project">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ea
+            sapiente enim?
+          </div>
+          <div class="project">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ea
+            sapiente enim?
+          </div>
+          <div class="project">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ea
+            sapiente enim?
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/jquery.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
