add style to the services box

--- a/index.html
+++ b/index.html
@@ -280,19 +280,11 @@
             </p>
           </div>
         </div>
-        <div class="project-slider" class="owl-theme owl-carousel">
+        <div id="project-slider" class="owl-theme owl-carousel">
           <div class="project">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ea
-            sapiente enim?
+           
           </div>
-          <div class="project">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ea
-            sapiente enim?
-          </div>
-          <div class="project">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ea
-            sapiente enim?
-          </div>
+          
         </div>
       </div>
     </section>
