add project pic to the projects slider carpusel

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         </div>
         <div id="project-slider" class="owl-theme owl-carousel">
           <div class="project">
-           
+            <img src="./img/project1.jpg" alt="project picture">
           </div>
           
         </div>
