--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     </section>
 
     <!-- OUR WORK -->
-    <section id="" class="bg-light">
+    <section id="services" class="bg-light">
       <div class="container">
         <div class="row">
           <div class="col-12 intro text-center">
@@ -284,6 +284,7 @@
           <div class="project">
             <img src="./img/project1.jpg" alt="project picture">
           </div>
+          
           
         </div>
       </div>
