--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     </section>
 
     <!-- OUR WORK -->
-    <section id="services" class="bg-light">
+    <section id="" class="bg-light">
       <div class="container">
         <div class="row">
           <div class="col-12 intro text-center">
