--- a/index.html
+++ b/index.html
@@ -282,10 +282,13 @@
         </div>
         <div id="project-slider" class="owl-theme owl-carousel">
           <div class="project">
-            <img src="./img/project1.jpg" alt="project picture">
+            <img src="./img/project1.jpg" alt="project picture" />
+            <div class="overlay"></div>
+            <div class="content">
+              <h1>Project Title</h1>
+              <h6>Project Subtitle</h6>
+            </div>
           </div>
-          
-          
         </div>
       </div>
     </section>
