--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
               <a class="nav-link" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Team</a>
+              <a class="nav-link" href="#team">Team</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Reviews</a>
+              <a class="nav-link" href="#reviews">Reviews</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
+              <a class="nav-link" href="#blog">Blog</a>
             </li>
           </ul>
           <a href="#" class="btn btn-brand ms-lg-3">Contact Us</a>
@@ -119,7 +119,7 @@
     </div>
 
     <!-- ABOUT -->
-    <section>
+    <section id="about">
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-lg-5">
@@ -266,8 +266,8 @@
       </div>
     </section>
 
-    <!-- OUR WORK -->
-    <section id="" class="bg-light">
+    <!-- PROJECTS -->
+    <section id="portfolio" class="bg-light">
       <div class="container">
         <div class="row">
           <div class="col-12 intro text-center">
@@ -322,6 +322,13 @@
                 </div>
             </div>
         </div>
+      </div>
+    </section>
+
+    <!-- TEAM -->
+    <section id="team">
+      <div class="container">
+        
       </div>
     </section>
 
