add intro section part of the teams section

--- a/index.html
+++ b/index.html
@@ -328,7 +328,17 @@
     <!-- TEAM -->
     <section id="team">
       <div class="container">
-        
+        <div class="row">
+          <div class="col-12 intro text-center">
+            <h6>OUR WORK</h6>
+            <h1>what We Do</h1>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
