add content part of team members section

--- a/index.html
+++ b/index.html
@@ -330,13 +330,24 @@
       <div class="container">
         <div class="row">
           <div class="col-12 intro text-center">
-            <h6>OUR WORK</h6>
-            <h1>what We Do</h1>
+            <h6>OUR TEAM</h6>
+            <h1>Meet Our Crew Members</h1>
             <p>
               Contrary to popular belief, Lorem Ipsum is not simply random text.
               It has roots in a piece of classical Latin literature from 45 BC,
               making it over 2000 years old
             </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+           <div class="team-members">
+            <img src="./img/team_1.jpg" alt="member photo">
+            <div class="overlay"></div>
+            <div class="content">
+              
+            </div>
+           </div>
           </div>
         </div>
       </div>
