add style to part of team members element

--- a/index.html
+++ b/index.html
@@ -341,11 +341,12 @@
         </div>
         <div class="row">
           <div class="col-lg-4">
-           <div class="team-members">
+           <div class="team-member">
             <img src="./img/team_1.jpg" alt="member photo">
             <div class="overlay"></div>
             <div class="content">
-              
+              <h5>Marvin McKinney</h5>
+              <p>Marketing Coordinator</p>
             </div>
            </div>
           </div>
