containerized the image and the overlay

--- a/index.html
+++ b/index.html
@@ -289,38 +289,38 @@
               <h6>Project Subtitle</h6>
             </div>
           </div>
-           <div class="project">
-                <div class="overlay"></div>
-                <img src="img/project2.jpg" alt="">
-                <div class="content">
-                    <h2>Consulting Marketing</h2>
-                    <h6>Website Design</h6>
-                </div>
+          <div class="project">
+            <div class="overlay"></div>
+            <img src="img/project2.jpg" alt="" />
+            <div class="content">
+              <h2>Consulting Marketing</h2>
+              <h6>Website Design</h6>
             </div>
-            <div class="project">
-                <div class="overlay"></div>
-                <img src="img/project3.jpg" alt="">
-                <div class="content">
-                    <h2>Consulting Marketing</h2>
-                    <h6>Website Design</h6>
-                </div>
+          </div>
+          <div class="project">
+            <div class="overlay"></div>
+            <img src="img/project3.jpg" alt="" />
+            <div class="content">
+              <h2>Consulting Marketing</h2>
+              <h6>Website Design</h6>
             </div>
-            <div class="project">
-                <div class="overlay"></div>
-                <img src="img/project4.jpg" alt="">
-                <div class="content">
-                    <h2>Consulting Marketing</h2>
-                    <h6>Website Design</h6>
-                </div>
+          </div>
+          <div class="project">
+            <div class="overlay"></div>
+            <img src="img/project4.jpg" alt="" />
+            <div class="content">
+              <h2>Consulting Marketing</h2>
+              <h6>Website Design</h6>
             </div>
-            <div class="project">
-                <div class="overlay"></div>
-                <img src="img/project5.jpg" alt="">
-                <div class="content">
-                    <h2>Consulting Marketing</h2>
-                    <h6>Website Design</h6>
-                </div>
+          </div>
+          <div class="project">
+            <div class="overlay"></div>
+            <img src="img/project5.jpg" alt="" />
+            <div class="content">
+              <h2>Consulting Marketing</h2>
+              <h6>Website Design</h6>
             </div>
+          </div>
         </div>
       </div>
     </section>
@@ -341,14 +341,16 @@
         </div>
         <div class="row">
           <div class="col-lg-4">
-           <div class="team-member">
-            <img src="./img/team_1.jpg" alt="member photo">
-            <div class="overlay"></div>
-            <div class="content">
-              <h5>Marvin McKinney</h5>
-              <p>Marketing Coordinator</p>
+            <div class="team-member">
+              <div class="img-wrapper">
+                <img src="./img/team_1.jpg" alt="member photo" />
+                <div class="overlay"></div>
+              </div>
+              <div class="content">
+                <h5>Marvin McKinney</h5>
+                <p>Marketing Coordinator</p>
+              </div>
             </div>
-           </div>
           </div>
         </div>
       </div>
