--- a/index.html
+++ b/index.html
@@ -345,6 +345,12 @@
               <div class="img-wrapper">
                 <img src="./img/team_1.jpg" alt="member photo" />
                 <div class="overlay"></div>
+                <div class="social-links">
+                  <a href="#"><i class="bx bxl-facebook"></i></a>
+                  <a href="#"><i class="bx bxl-twitter"></i></a>
+                  <a href="#"><i class="bx bxl-github"></i></a>
+                  <a href="#"><i class="bx bxl-youtube"></i></a>
+                </div>
               </div>
               <div class="content">
                 <h5>Marvin McKinney</h5>
