add overlay transition

--- a/index.html
+++ b/index.html
@@ -358,6 +358,42 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4">
+            <div class="team-member">
+              <div class="img-wrapper">
+                <img src="./img/team_2.jpg" alt="member photo" />
+                <div class="overlay"></div>
+                <div class="social-links">
+                  <a href="#"><i class="bx bxl-facebook"></i></a>
+                  <a href="#"><i class="bx bxl-twitter"></i></a>
+                  <a href="#"><i class="bx bxl-github"></i></a>
+                  <a href="#"><i class="bx bxl-youtube"></i></a>
+                </div>
+              </div>
+              <div class="content">
+                <h5>Kathryn Murphy</h5>
+                <p>Ethical Hacker</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="team-member">
+              <div class="img-wrapper">
+                <img src="./img/team_3.jpg" alt="member photo" />
+                <div class="overlay"></div>
+                <div class="social-links">
+                  <a href="#"><i class="bx bxl-facebook"></i></a>
+                  <a href="#"><i class="bx bxl-twitter"></i></a>
+                  <a href="#"><i class="bx bxl-github"></i></a>
+                  <a href="#"><i class="bx bxl-youtube"></i></a>
+                </div>
+              </div>
+              <div class="content">
+                <h5>Darrell Steward</h5>
+                <p>Software Developer</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
