--- a/index.html
+++ b/index.html
@@ -399,20 +399,22 @@
     </section>
 
     <!-- REVIEWS -->
-    <div class="owl-carousel owl-theme" id="reviews-slider">
-      <div class="item"><h4>1</h4></div>
-      <div class="item"><h4>2</h4></div>
-      <div class="item"><h4>3</h4></div>
-      <div class="item"><h4>4</h4></div>
-      <div class="item"><h4>5</h4></div>
-      <div class="item"><h4>6</h4></div>
-      <div class="item"><h4>7</h4></div>
-      <div class="item"><h4>8</h4></div>
-      <div class="item"><h4>9</h4></div>
-      <div class="item"><h4>10</h4></div>
-      <div class="item"><h4>11</h4></div>
-      <div class="item"><h4>12</h4></div>
-    </div>
+    <section id="reviews">
+      <div class="owl-carousel owl-theme" id="reviews-slider">
+        <div class="item"><h4>1</h4></div>
+        <div class="item"><h4>2</h4></div>
+        <div class="item"><h4>3</h4></div>
+        <div class="item"><h4>4</h4></div>
+        <div class="item"><h4>5</h4></div>
+        <div class="item"><h4>6</h4></div>
+        <div class="item"><h4>7</h4></div>
+        <div class="item"><h4>8</h4></div>
+        <div class="item"><h4>9</h4></div>
+        <div class="item"><h4>10</h4></div>
+        <div class="item"><h4>11</h4></div>
+        <div class="item"><h4>12</h4></div>
+      </div>
+    </section>
 
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/jquery.min.js"></script>
