--- a/index.html
+++ b/index.html
@@ -399,21 +399,14 @@
     </section>
 
     <!-- REVIEWS -->
-    <section id="reviews">
+    <section id="reviews" class="bg-cover">
       <div class="owl-carousel owl-theme" id="reviews-slider">
-        <div class="item"><h4>1</h4></div>
-        <div class="item"><h4>2</h4></div>
-        <div class="item"><h4>3</h4></div>
-        <div class="item"><h4>4</h4></div>
-        <div class="item"><h4>5</h4></div>
-        <div class="item"><h4>6</h4></div>
-        <div class="item"><h4>7</h4></div>
-        <div class="item"><h4>8</h4></div>
-        <div class="item"><h4>9</h4></div>
-        <div class="item"><h4>10</h4></div>
-        <div class="item"><h4>11</h4></div>
-        <div class="item"><h4>12</h4></div>
-      </div>
+        <div class="review">
+          <img src="./img/team_1.jpg" alt="team member photo">
+          <h4>Jonathan Doe Khan</h4>
+          <small>Web Developer</small>
+          <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore aperiam quo mollitia neque alias rerum inventore animi nemo incidunt voluptatum! Reprehenderit facilis ad ratione quas ducimus magnam iure maiores blanditiis nesciunt debitis.</p>
+        </div>       
     </section>
 
     <script src="./js/bootstrap.bundle.min.js"></script>
