add more review tabs in the carousel

--- a/index.html
+++ b/index.html
@@ -401,12 +401,26 @@
     <!-- REVIEWS -->
     <section id="reviews" class="bg-cover">
       <div class="owl-carousel owl-theme" id="reviews-slider">
+
         <div class="review">
           <img src="./img/team_1.jpg" alt="team member photo">
           <h4>Jonathan Doe Khan</h4>
           <small>Web Developer</small>
           <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore aperiam quo mollitia neque alias rerum inventore animi nemo incidunt voluptatum! Reprehenderit facilis ad ratione quas ducimus magnam iure maiores blanditiis nesciunt debitis.</p>
-        </div>       
+        </div> 
+        <div class="review">
+          <img src="./img/team_1.jpg" alt="team member photo">
+          <h4>Jonathan Doe Khan</h4>
+          <small>Web Developer</small>
+          <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore aperiam quo mollitia neque alias rerum inventore animi nemo incidunt voluptatum! Reprehenderit facilis ad ratione quas ducimus magnam iure maiores blanditiis nesciunt debitis.</p>
+        </div> 
+        <div class="review">
+          <img src="./img/team_1.jpg" alt="team member photo">
+          <h4>Jonathan Doe Khan</h4>
+          <small>Web Developer</small>
+          <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore aperiam quo mollitia neque alias rerum inventore animi nemo incidunt voluptatum! Reprehenderit facilis ad ratione quas ducimus magnam iure maiores blanditiis nesciunt debitis.</p>
+        </div> 
+
     </section>
 
     <script src="./js/bootstrap.bundle.min.js"></script>
