add blog section

--- a/index.html
+++ b/index.html
@@ -409,18 +409,35 @@
           <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore aperiam quo mollitia neque alias rerum inventore animi nemo incidunt voluptatum! Reprehenderit facilis ad ratione quas ducimus magnam iure maiores blanditiis nesciunt debitis.</p>
         </div> 
         <div class="review">
-          <img src="./img/team_1.jpg" alt="team member photo">
+          <img src="./img/team_2.jpg" alt="team member photo">
           <h4>Jonathan Doe Khan</h4>
           <small>Web Developer</small>
           <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore aperiam quo mollitia neque alias rerum inventore animi nemo incidunt voluptatum! Reprehenderit facilis ad ratione quas ducimus magnam iure maiores blanditiis nesciunt debitis.</p>
         </div> 
         <div class="review">
-          <img src="./img/team_1.jpg" alt="team member photo">
+          <img src="./img/team_3.jpg" alt="team member photo">
           <h4>Jonathan Doe Khan</h4>
           <small>Web Developer</small>
           <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore aperiam quo mollitia neque alias rerum inventore animi nemo incidunt voluptatum! Reprehenderit facilis ad ratione quas ducimus magnam iure maiores blanditiis nesciunt debitis.</p>
         </div> 
 
+    </section>
+
+    <!-- BLOGS -->
+    <section id="blog">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 intro text-center">
+            <h6>OUR TEAM</h6>
+            <h1>Meet Our Crew Members</h1>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <script src="./js/bootstrap.bundle.min.js"></script>
