--- a/index.html
+++ b/index.html
@@ -428,13 +428,25 @@
       <div class="container">
         <div class="row">
           <div class="col-12 intro text-center">
-            <h6>OUR TEAM</h6>
-            <h1>Meet Our Crew Members</h1>
+            <h6>OUR BLOG</h6>
+            <h1>Latest Blog Posts</h1>
             <p>
               Contrary to popular belief, Lorem Ipsum is not simply random text.
               It has roots in a piece of classical Latin literature from 45 BC,
               making it over 2000 years old
             </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="blog-post">
+              <img src="./img/project5.jpg" alt="">
+              <small>12 Dec, 2099</small>
+              <h4>Web Design in 2055</h4>
+              <p>Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old</p>
+            </div>
           </div>
         </div>
       </div>
