add style to the tag

--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="blog-post">
+              <a href="#" class="tag">web design</a>
               <img src="./img/project5.jpg" alt="">
               <small>12 Dec, 2099</small>
               <h4>Web Design in 2055</h4>
